[tool.poetry]
name = "dyndns"
version = "1.1.1"
description = "A simple dynamic DNS HTTP based update API using Python and the Flask web framework."
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/Josef-Friedrich/dyndns"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
dnspython = "^2"
docutils = "^0"
Flask = "^3"
Pygments = "^2"
PyYAML = "^6"
typing-extensions = "^4"
types-docutils = "^0"

[tool.poetry.group.dev.dependencies]
ruff = "^0"
beautifulsoup4 = "^4"
readme-patcher = "^0"
Sphinx = "^7"
sphinx-rtd-theme = "^2"
tox = "^4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
'dyndns-debug' = "dyndns.cli:main"
