[project]
name = "dyndns"
version = "2.0.0"
description = "A simple dynamic DNS HTTP based update API using Python and the Flask web framework."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.10,<4"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "dnspython>=2.8.0",
    "flask>=3.1.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12.20250915",
    "typing-extensions>=4.15.0",
]

[project.urls]
Documentation = "https://dyndns.readthedocs.io/"
Download = "https://pypi.org/project/dyndns/"
Source = "https://github.com/Josef-Friedrich/dyndns"
Issues = "https://github.com/Josef-Friedrich/dyndns/issues"
Changelog = "https://github.com/Josef-Friedrich/dyndns/blob/main/CHANGELOG.md"

[project.scripts]
dyndns = "dyndns.cli:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "pytest>=8.4.2",
]
